--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
           <span class="modal-title">Modal title</span>
           <span class="modal-close">x</span>
         </div>
+        <div class="modal-body">
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="modal-footer">
+          <button>Ok</button>
+          <button>Cancel</button>
+        </div>
       </div>
     </div>
   </div>
