--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
 <body>
   <div class="container">
-    <h1>Javascript Practice</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fugiat impedit deserunt atque accusantium
-      earum iure modi error rem enim officiis dicta, labore nulla molestiae praesentium quidem quis? Doloribus, nam?</p>
+    <div class="row" id="fruits"></div>
   </div>
   <script src="base.js"></script>
   <script src="plugins/modal.js"></script>
