--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container">
-    <div class="row" id="fruits"></div>
+    <div class="row" id="cars"></div>
   </div>
   <script src="base.js"></script>
   <script src="plugins/modal.js"></script>
